--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Shikher Verma
+title: Shobhit Puri
 header-img: img/home-bg.jpg
 description: >-
   Mobile Apps Development Enthusiast | Software Developer | Badminton Enthusiast
