Made links open in new tab

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ published: true
 <section id="about">
 	<div>
     	<p><font size="5">Who am I?</font></p>
-		<p>Hi, I am currently leading a team of software developers at <a href="www.traderev.com" target="_blank">TradeRev</a>, which is an online automotive remarketing system. I am a Mobile Application Development enthusiast and love working with server side technologies. I have been enjoying developing apps on Android for 4+ years and have been working with Amazon Web Services for 2+ years. In addition to TradeRev, I got a chance to work on some exciting apps like mobile payment solutions using Bluetooth Low Energy, NFC and QR code, app for drug relapse prevention for people with additive disorders, app for enabling user to securely login to web services leveraging 'something that user has', i.e chip cards and mobile devices.
+		<p>Hi, I am currently leading a team of software developers at <a href="http://www.traderev.com" target="_blank">TradeRev</a>, which is an online automotive remarketing system. I am a Mobile Application Development enthusiast and love working with server side technologies. I have been enjoying developing apps on Android for 4+ years and have been working with Amazon Web Services for 2+ years. In addition to TradeRev, I got a chance to work on some exciting apps like mobile payment solutions using Bluetooth Low Energy, NFC and QR code, app for drug relapse prevention for people with additive disorders, app for enabling user to securely login to web services leveraging 'something that user has', i.e chip cards and mobile devices.
 		</p>
 
     	<p><font size="5">What I have to offer?</font></p>
