--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
     If your browser doesn't automatically redirect within a few seconds please click this link to go to  
-<a href="http://shobhitpuri.com/resume/ShobhitPuriResume.pdf">resume.pdf</a> 
+<a href="http://shobhitpuri.com/resume/ShobhitPuriResume.pdf" target="_blank">resume.pdf</a> 
 manually.
 </body>
 </html>
