--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ It means that the foremost requirement of happiness is a healthy body. Second is
 <section id="portfolio">
 	<div class="row">
 		<div class="text-center">
-			<h3>Some of the projects I enjoyed developing:</h3>
+			<h3>Fun projects:</h3>
 			<hr>
 		</div>
 	</div>
