Add portfolio on bar

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ It means that the foremost requirement of happiness is a healthy body. Second is
 <section id="portfolio">
 	<div class="row">
 		<div class="text-center">
+			<a id="href-portfolio">
 			<h3>Fun projects:</h3>
 			<hr>
 		</div>
