Cross for details portfolio trial

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@ It means that the foremost requirement of happiness is a healthy body. Second is
 				</div>
 				<div class="container">
 					<div class="row">
+						<div class="close-modal" data-dismiss="modal">
+							<div class="lr">
+								<div class="rl">
+								</div>
+							</div>
+						</div>
 						<div class="col-lg-8 col-lg-offset-2">
 							<div class="modal-body">
 								<h2>{{ item.title }}</h2>
