Update About me section on home page

--- a/index.html
+++ b/index.html
@@ -12,11 +12,30 @@ published: true
 <section id="about">
 	<div>
     	<p><font size="5">Who am I?</font></p>
-		<p>Hi, I am currently working as Android Lead at <a href="https://www.traderev.com" target="_blank">TradeRev</a>. It is an online automotive remarketing system. I am also volunteering with a distributed team of <a href="https://miraclemessages.org/" target="_blank">Miracle Messages</a> - a non-profit organization that helps reunite homeless people with their loved ones - to help develop their Android and iOS applications. As you might have guessed, I am a Mobile Application Development enthusiast. I've been enjoying developing apps for almost 4.5 years now. I am also an Amazon Certified Solutions Architect and have been working with Amazon Web Services for 2.5 years. I thoroughly enjoyed working on other exciting projects like developing mobile payment solutions with Bluetooth Low Energy, NFC and QR code, app for drug relapse prevention for people with additive disorders, app for enabling user to securely login to web services leveraging 'something that user has', i.e chip cards and mobile devices.
+		<p>Hi, I am a Mobile Application Development enthusiast. I've been enjoying developing apps for 5+ years now. I also got certified as an Amazon Certified Solutions Architect and have been working with Amazon Web Services for 3+ years. I thoroughly enjoy working on new and exciting technologies. Some of my previous projects include developing app to help with homelessness, app for drug relapse prevention for people with additive disorders, app to help seniors read better on mobile devices, mobile payment solutions with Bluetooth Low Energy, NFC and QR code, app for enabling user to secure login to web services leveraging chip cards and mobile devices.
+		</p>
+
+    	<p><font size="5">What am I up to?</font></p>
+		<p>
+			<ul>
+				<li>
+					I have been running a company called Puri Technologies Ltd. which provides software development and consulting services.
+				</li>
+				<li>
+					I've been helping <a href="https://www.realtor.com" target="_blank">Realtor.com&copy;</a> to maintain and improve their <a href="https://play.google.com/store/apps/details?id=com.move.realtor" target="_blank">Real Estate: Homes for Sale and Rent</a> Android app, which has over 10 million installs.					
+				</li>
+				<li>
+					Before that I was leading an Android team at <a href="https://www.traderev.com" target="_blank">TradeRev</a>, which is an online automotive remarketing system. 					
+				</li>
+				<li>
+					I was also recently volunteering with a distributed team of <a href="https://miraclemessages.org/" target="_blank">Miracle Messages</a> - a non-profit organization that helps reunite homeless people with their loved ones - to help develop their Android and iOS applications. 					
+				</li>
+			</ul>'s'
 		</p>
 
     	<p><font size="5">What I have to offer?</font></p>
-		<p>I believe that for creating something useful, its necessary for people with diverse professional backgrounds to come together. If you have a great idea that would have a positive effect on society, I would love to offer my skills.
+		<p>
+			I believe that for creating something useful, its necessary for people with diverse professional backgrounds to come together. If you have a great idea that would have a positive effect on society, I would love to offer my skills.
 		</p>
         
 		<p><font size="5">What are my beliefs?</font></p>
