--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ published: true
 <section id="about">
 	<div>
     	<p><font size="5">Who am I?</font></p>
-		<p>Hi, I am a Mobile Application Development enthusiast. I've been enjoying developing apps for 5+ years now. I also got certified as an Amazon Certified Solutions Architect and have been working with Amazon Web Services for 3+ years. I thoroughly enjoy working on new and exciting technologies. Some of my previous projects include developing app to help with homelessness, app for drug relapse prevention for people with additive disorders, app to help seniors read better on mobile devices, mobile payment solutions with Bluetooth Low Energy, NFC and QR code, app for enabling user to secure login to web services leveraging chip cards and mobile devices.
+		<p>Hi, I am a Mobile Application Development enthusiast. I've been enjoying developing apps for 6+ years now. I also got certified as an Amazon Certified Solutions Architect and have been working with Amazon Web Services for 3+ years. I thoroughly enjoy working on new and exciting technologies. Some of my previous projects include developing app to help with homelessness, app for drug relapse prevention for people with additive disorders, app to help seniors read better on mobile devices, mobile payment solutions with Bluetooth Low Energy, NFC and QR code, app for enabling user to secure login to web services leveraging chip cards and mobile devices.
 		</p>
 
     	<p><font size="5">What am I up to?</font></p>
@@ -22,7 +22,7 @@ published: true
 					I have been running a company called Puri Technologies Ltd. which provides software development and consulting services.
 				</li>
 				<li>
-					I've been helping <a href="https://www.realtor.com" target="_blank">Realtor.com&copy;</a> to maintain and improve their <a href="https://play.google.com/store/apps/details?id=com.move.realtor" target="_blank">Real Estate: Homes for Sale and Rent</a> Android app, which has over 10 million installs.					
+					I've been helping <a href="https://www.realtor.com" target="_blank">Realtor.com&copy;</a> to maintain and improve their <a href="https://play.google.com/store/apps/details?id=com.move.realtor" target="_blank">Android</a> and <a href="https://apps.apple.com/us/app/realtor-com-real-estate-search/id336698281" target="_blank">iOS</a> app, which has over 10 million installs.					
 				</li>
 				<li>
 					Before that I was leading an Android team at <a href="https://www.traderev.com" target="_blank">TradeRev</a>, which is an online automotive remarketing system. 					
