--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ It means that the foremost requirement of happiness is a healthy body. Second is
 	<div class="row">
 		<div class="text-center">
 			<a id="href-portfolio">
-			<h3>Fun projects:</h3>
+			<h3>Some Projects:</h3>
 			<hr>
 		</div>
 	</div>
