--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ published: true
 <section id="about">
 	<div>
     	<p><font size="5">Who am I?</font></p>
-		<p>Hi, I am a Mobile Application Development enthusiast. I've been enjoying developing apps for 7+ years now. I also got certified as an Amazon Certified Solutions Architect and have been working with Amazon Web Services for 3+ years. I thoroughly enjoy working on new and exciting technologies. Some of my previous projects include developing app to help with homelessness, app for drug relapse prevention for people with additive disorders, app to help seniors read better on mobile devices, mobile payment solutions with Bluetooth Low Energy, NFC and QR code, app for enabling user to secure login to web services leveraging chip cards and mobile devices.
+		<p>
+			I'm an experienced engineering leader and technology enthusiast with a decade of expertise in mobile app development. I have a diverse skill set encompassing various technology stacks, including Flutter, native Android, native iOS, CI/CD pipelines, and Backend/API development. Throughout my career, I have successfully architected numerous mobile projects from scratch and led teams of more than 10 members for over four years. Additionally, I have a strong passion for helping others, as demonstrated by my extensive contributions on StackOverflow, where I have answered over 600 questions, reaching and assisting more than 3 million developers. I have also made significant contributions to the development of large-scale apps with millions of monthly active users, spanning various domains such as education, real estate, car auctioning, mobile payment solutions utilizing Bluetooth Low Energy, NFC, and QR codes, as well as apps for drug relapse prevention and secure web service logins leveraging chip cards and mobile devices.
 		</p>
 
     	<p><font size="5">What am I up to?</font></p>
@@ -21,11 +22,9 @@ published: true
 				<li>
 					I have been running a company called Puri Technologies Ltd. which provides software development and consulting services.
 				</li>
+				
 				<li>
-					I've been helping <a href="https://www.realtor.com" target="_blank">Realtor.com&copy;</a> to maintain and improve their <a href="https://play.google.com/store/apps/details?id=com.move.realtor" target="_blank">Android</a> and <a href="https://apps.apple.com/us/app/realtor-com-real-estate-search/id336698281" target="_blank">iOS</a> app, which has over 10 million installs.					
-				</li>
-				<li>
-					Before that I was leading an Android team at <a href="https://www.traderev.com" target="_blank">TradeRev</a>, which is an online automotive remarketing system. 					
+					Most recently, I was an Engineering Director at WillowTree, a digital product agency that served Fortune 500 clients such as HBO, CBC, National Geographic, 21st Century Fox, PepsiCo, and Regal Cinemas, to design and build digital products and experiences. In my role, I was responsible for people management, client engagement, stakeholder engagement, technical architecture, coaching, mentoring, and other related activities.					
 				</li>
 				<li>
 					I was also recently volunteering with a distributed team of <a href="https://miraclemessages.org/" target="_blank">Miracle Messages</a> - a non-profit organization that helps reunite homeless people with their loved ones - to help develop their Android and iOS applications. 					
