Update page headline

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@ layout: page
 title: Shobhit Puri
 header-img: img/home-bg.jpg
 description: >-
-  Mobile Apps Development Enthusiast | Software Developer | Badminton Enthusiast
-  | Social Welfare | Searching for soul enlightenment
+  Engineering Leader | Mobile/AI Enthusiast | Previously Engineering Director at WillowTree | Mindfulness Practitioner | Love Badminton & Ping Pong | Social Welfare
 published: true
 ---
 
