Update index.html about me

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@ published: true
 	<div>
     	<p><font size="5">Who am I?</font></p>
 		<p>
-			I'm an experienced engineering leader and technology enthusiast with a decade of expertise in mobile app development. I have a diverse skill set encompassing various technology stacks, including Flutter, native Android, native iOS, CI/CD pipelines, and Backend/API development. Throughout my career, I have successfully architected numerous mobile projects from scratch and led teams of more than 10 members for over four years. Additionally, I have a strong passion for helping others, as demonstrated by my extensive contributions on StackOverflow, where I have answered over 600 questions, reaching and assisting more than 3 million developers. I have also made significant contributions to the development of large-scale apps with millions of monthly active users, spanning various domains such as education, real estate, car auctioning, mobile payment solutions utilizing Bluetooth Low Energy, NFC, and QR codes, as well as apps for drug relapse prevention and secure web service logins leveraging chip cards and mobile devices.
+			I'm an experienced engineering leader and technology enthusiast with over a decade of full-stack experience, specializing in the mobile ecosystem. I have successfully led numerous teams and projects from inception to completion, shaping their technical vision, strategy, and architecture, as well as supported those with more than 10 million monthly active users. These projects span various industries, including finance, education, real estate, and vehicle auctioning. I have worked with diverse technology stacks, including native Android, native iOS, Flutter, Backend/API development, AWS Infrastructure Development, and Generative AI.
 		</p>
-
+	<p><font size="5">What's my passion?</font></p></p>
+		<p>
+			My passion lies in harnessing technology to create a positive impact, whether it's by aiding fellow developers or supporting organizations that strive to make a meaningful difference in people's lives. As one of the top 2% contributors on Stack Overflow, with over 610 Q&As, I've reached and impacted over 3.4 million developers on the platform. In addition, I had multiple open-source contributions, and I am actively involved in course creation for mobile developers, collaborating with platforms like Kodeco and Droidcon, which get millions of monthly visits. I also mentor aspiring professionals through Upnotch. My commitment to giving back extends to volunteering with NGOs such as Miracle Messages and the NYCH senior club, where I've developed apps to support their respective causes.
+		</p>
     	<p><font size="5">What am I up to?</font></p>
 		<p>
 			<ul>
@@ -23,10 +26,10 @@ published: true
 				</li>
 				
 				<li>
-					Most recently, I was an Engineering Director at WillowTree, a digital product agency that served Fortune 500 clients such as HBO, CBC, National Geographic, 21st Century Fox, PepsiCo, and Regal Cinemas, to design and build digital products and experiences. In my role, I was responsible for people management, client engagement, stakeholder engagement, technical architecture, coaching, mentoring, and other related activities.					
+					Most recently, I was an Engineering Director at WillowTree, a digital product agency that served Fortune 500 clients such as HBO, CBC, National Geographic, Fox, and PepsiCo, to design and build digital products and experiences. I spearheaded a diverse team of engineers while collaborating with one of the world's largest brewing company, and was responsible for people management, client engagement, stakeholder engagement, technical architecture, coaching, mentoring, and other related activities. 					
 				</li>
 				<li>
-					I was also recently volunteering with a distributed team of <a href="https://miraclemessages.org/" target="_blank">Miracle Messages</a> - a non-profit organization that helps reunite homeless people with their loved ones - to help develop their Android and iOS applications. 					
+					In my spare time, I am actively working on creating courses for developers on Droidcon Academy, advising startups like TakeStock.ai, and mentoring on Upnotch. 					
 				</li>
 			</ul>
 		</p>
