--- a/courses/index.html
+++ b/courses/index.html
@@ -1,12 +1,10 @@
 <html>
     <head>
-    <title>Redirecting...</title>
+    <title>404</title>
     <meta http-equiv="refresh" content="0; URL=https://courses.shobhitpuri.com">
     <meta name="keywords" content="automatic redirection">
     </head>
     <body>
-    If your browser doesn't automatically redirect within a few seconds please click this link to go to  
-<a href="https://shobhit.thinkific.com/">Shobhit's Thinkific Courses</a> 
-manually.
-</body>
+        404
+    </body>
 </html>
